# SPDZ-2-Extension-Ring

./: CMakeLists.txt
NecReplicatedForSpdz/include/: HashEncrypt.h  PRG.hpp
NecReplicatedForSpdz/src/: HashEncrypt.cpp  PRG.cpp
